[Extensions Click-to-Script] Adjust context menu options

Currently, if an extension is affected by runtime host permissions but
doesn't want to run on the current site, we still show the context menu
submenu entry for page access. The only item is the "Learn more" link.

Instead, remove the context menu submenu for these sites, and replace it
with a (disabled) menu item "Can't read or change site's data".

Bug: 909790
Change-Id: Id77efca23a96e8d5d8f683954946970b652612d4
Reviewed-on: https://chromium-review.googlesource.com/c/1351302
Commit-Queue: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Karan Bhatia <karandeepb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612813}
Former-commit-id: c40a10c176b8375b6f9e3d949497f4d3952a2971